second version (+text)

--- a/index.html
+++ b/index.html
@@ -12,15 +12,28 @@
 <header class="main-header gl0">
     <div class="container gl1">
         <div class="header-top gl2">
-            <nav class="main-menu gl3"></nav>
+            <nav class="main-menu gl3">
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Кто я?</a></li>
+                    <li><a href="#">Заказать помощь</a></li>
+                    <li><a href="#">@jekaForbes</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
 
     <div class="container gray_border gl1">
         <div class="promo gl2">
             <img class = "none" src="image/none.png" alt="альтернативный текст" />
-            <div class = "main-text gl3"> </div>
-            <div class="button gl3"></div>
+            <div class = "main-text gl3">
+                <span class="first-row">Страховая программа</span>
+                <span class="h upper">Защита +</span>
+            </div>
+
+            <p>Одна из самых...</p>
+
+            <div class="button gl3"> купить </div>
         </div>
     </div>
 </header>
@@ -28,35 +41,72 @@
 <section class="subjects gl0">
     <div class="container gl1">
         <div class="header-subjects gl2">
-            <nav class="about gl3"></nav>
+            <nav class="about h gl3"> Предметы </nav>
         </div>
-        <div class="subjects-item gray_border gl2"></div>
-        <div class="subjects-item gray_border gl2"></div>
-        <div class="subjects-item gray_border gl2"></div>
-        <div class="subjects-item gray_border gl2"></div>
-        <div class="subjects-item gray_border gl2"></div>
+
+        <div class="subjects-item gray_border gl2">
+            Предмет
+            <br>
+            1
+            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+        </div>
+        <div class="subjects-item gray_border gl2">
+            Предмет
+            <br>
+            2
+            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+        </div>
+        <div class="subjects-item gray_border gl2">
+            Предмет
+            <br>
+            3
+            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+        </div>
+        <div class="subjects-item gray_border gl2">
+            Предмет
+            <br>
+            4
+            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+        </div>
+        <div class="subjects-item gray_border gl2">
+            Предмет
+            <br>
+            5
+            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+        </div>
+
     </div>
 </section>
 
 <section class="examples gl0">
     <div class="container gl1">
         <div class="header-examples gl2">
-            <nav class="about gl3"></nav>
+            <nav class="about h gl3">Примеры, которые я могу предоставить вам</nav>
         </div>
 
          <div class="examples-item gl2">
             <img class = "none2" src="image/none.png" alt="альтернативный текст" />
-            <blockquote class="examples-content-right gl3"></blockquote>
+            <blockquote class="examples-content-right gl3">
+                <p>20+</p>
+                текст пример1
+            </blockquote>
         </div>
 
         <div class="examples-item gl2">
             <img class = "none3" src="image/none.png" alt="альтернативный текст" />
-            <blockquote class="examples-content-left gl3"></blockquote>
+            <blockquote class="examples-content-left gl3">
+                <img class = "none10" src="image/none.png" alt="альтернативный текст" />
+                <p>BestApp</p>
+                текст пример2
+            </blockquote>
         </div>
 
         <div class="examples-item gl2">
             <img class = "none4" src="image/none.png" alt="альтернативный текст" />
-            <blockquote class="examples-content-right gl3"></blockquote>
+            <blockquote class="examples-content-right gl3">
+                <p>600 000Р</p>
+                текст пример3
+            </blockquote>
         </div>
     </div>
 </section>
@@ -65,43 +115,119 @@
 <section class="contacts gl0">
     <div class="container gl1">
         <div class="header-contacts gl2">
-            <nav class="about gl3"></nav>
+            <nav class="about h gl3"> Что делать, если хочешь записаться?</nav>
         </div>
+
         <div class="container gl1">
-            <div class="contacts-item gray_border gl2">
-                <div class="content1 gl3">
+
+            <div class="item gray_border">
+                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                напиши
+
+                <div class="dropdown-content dropdown-content1 gray_border">
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text1</a></li>
+                            <li><a href="#">text2</a></li>
+                            <li><a href="#">text3</a></li>
+                            <li><a href="#">text4</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text5</a></li>
+                            <li><a href="#">text6</a></li>
+                            <li><a href="#">text7</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="contacts-item gray_border gl2">
-                <div class="content2 gl3">
+
+            <div class="item gray_border">
+                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                заполни
+
+                <div class="dropdown-content dropdown-content2 gray_border">
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text1</a></li>
+                            <li><a href="#">text2</a></li>
+                            <li><a href="#">text3</a></li>
+                            <li><a href="#">text4</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text5</a></li>
+                            <li><a href="#">text6</a></li>
+                            <li><a href="#">text7</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="contacts-item gray_border gl2">
-                <div class="content3 gl3">
+
+            <div class="item gray_border">
+                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                узнай статус
+
+                <div class="dropdown-content dropdown-content3 gray_border">
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text1</a></li>
+                            <li><a href="#">text2</a></li>
+                            <li><a href="#">text3</a></li>
+                            <li><a href="#">text4</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text5</a></li>
+                            <li><a href="#">text6</a></li>
+                            <li><a href="#">text7</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="contacts-item gray_border gl2">
-                <div class="content4 gl3">
-                    gfdfgh
+
+            <div class="item gray_border">
+                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                получи архив!
+
+                <div class="dropdown-content dropdown-content4 gray_border">
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text1</a></li>
+                            <li><a href="#">text2</a></li>
+                            <li><a href="#">text3</a></li>
+                            <li><a href="#">text4</a></li>
+                        </ul>
+                    </div>
+                    <div class="dropdown">
+                        <ul>
+                            <li><a href="#">text5</a></li>
+                            <li><a href="#">text6</a></li>
+                            <li><a href="#">text7</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+
 
         </div>
-
-<!--        <div class="container bottom gl1">-->
-<!--            <div class="contacts-item-big gl2"></div>-->
-<!--            <div class="contacts-item-big gl2"></div>-->
-<!--        </div>-->
     </div>
 </section>
 
 <section class="pdf gl0">
     <div class="container gl1">
         <div class="header-top gl2">
-            <nav class="about gl3"></nav>
+            <nav class="about h gl3">
+                Посмотреть полную
+                <br>
+                презентацию продукта
+            </nav>
         </div>
         <div class="container gl1">
-            <div class="button gl2"></div>
+            <div class="button gl2"> Скачать pdf</div>
         </div>
     </div>
 </section>
@@ -109,13 +235,55 @@
 <footer class="main-footer gl0">
     <div class="container gl1">
         <div class="footer-top gl2">
-            <div class="footer-menu gl3"></div>
-            <div class="footer-menu gl3"></div>
             <div class="footer-menu gl3">
-                <div class="footer-button gl3"> </div>
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">новости</a></li>
+                    <li><a href="#">Спецпредложения</a></li>
+                    <li><a href="#">Бизнес предложения</a></li>
+                    <li><a href="#">Твое предложение</a></li>
+                </ul>
             </div>
             <div class="footer-menu gl3">
-                <div class="footer-social gl3"> </div>
+                <ul>
+                    <li><a href="#">Контакты</a></li>
+                    <li><a href="#">Карта сайта</a></li>
+                </ul>
+            </div>
+            <div class="footer-menu gl3">
+                1234213 г.Санкт-Петербург
+                Кронверский 49
+                <br>
+                <br>
+                График работы 10:00 - 23:00
+                Пн-пт работаем
+                <div class="button gl3"> Как добраться</div>
+            </div>
+            <div class="footer-menu gl3">
+                Адрес для почтовых отправлений:
+                1235342 г. Санкт-Петербург
+
+                <br>
+                <br>
+                тел 8549345324
+
+                <br>
+                <br>
+                email:
+                regbvfvre@yandex.ru
+
+                <div class="footer-social gl3">
+                    <a href="#" class="social-btn social-btn-vk gl0">
+                        vk
+                    </a>
+                    <a href="#" class="social-btn social-btn-fb gl0">
+                        fb
+                    </a>
+                    <a href="#" class="social-btn social-btn-in gl0">
+                        in
+                    </a>
+                </div>
             </div>
         </div>
     </div>
