--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>A+</title>
+        <title>WebSite</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -25,13 +25,13 @@
 
     <div class="container gray_border gl1">
         <div class="promo gl2">
-            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+            <img class = "main" src="image/main.jpg" alt="альтернативный текст" />
             <div class = "main-text gl3">
                 <span class="first-row">Страховая программа</span>
                 <span class="h upper">Защита +</span>
             </div>
 
-            <p>Одна из самых...</p>
+            <p>Одна из самых удобных и выгодных страховых программ предоставляемых грожанам России и иностранным гражданам</p>
 
             <div class="button gl3"> купить </div>
         </div>
@@ -48,31 +48,31 @@
             Предмет
             <br>
             1
-            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+            <img class = "subjects-img" src="image/time.jpg" alt="альтернативный текст" />
         </div>
         <div class="subjects-item gray_border gl2">
             Предмет
             <br>
             2
-            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+            <img class = "subjects-img" src="image/calendar.jpg" alt="альтернативный текст" />
         </div>
         <div class="subjects-item gray_border gl2">
             Предмет
             <br>
             3
-            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+            <img class = "subjects-img" src="image/phone.jpg" alt="альтернативный текст" />
         </div>
         <div class="subjects-item gray_border gl2">
             Предмет
             <br>
             4
-            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+            <img class = "subjects-img" src="image/lab.jpg" alt="альтернативный текст" />
         </div>
         <div class="subjects-item gray_border gl2">
             Предмет
             <br>
             5
-            <img class = "none" src="image/none.png" alt="альтернативный текст" />
+            <img class = "subjects-img" src="image/butterfly.jpg" alt="альтернативный текст" />
         </div>
 
     </div>
@@ -85,28 +85,28 @@
         </div>
 
          <div class="examples-item gl2">
-            <img class = "none2" src="image/none.png" alt="альтернативный текст" />
+            <img class = "left-img" src="image/peoples.jpg" alt="альтернативный текст" />
             <blockquote class="examples-content-right gl3">
                 <p>20+</p>
-                текст пример1
+                <span class="examples-text">Высококвалифицированных врачей к которым вы можете обращаться 24/7</span>
             </blockquote>
         </div>
 
         <div class="examples-item gl2">
-            <img class = "none3" src="image/none.png" alt="альтернативный текст" />
+            <img class = "right-img" src="image/mobileApp.jpg" alt="альтернативный текст" />
             <blockquote class="examples-content-left gl3">
-                <img class = "none10" src="image/none.png" alt="альтернативный текст" />
+                <img class = "iconApp" src="image/iconApp.jpg" alt="альтернативный текст" />
                 <p>BestApp</p>
-                текст пример2
+                <span class="examples-text">Доступ в один из лучших медицинских сервисов в России</span>
             </blockquote>
 
         </div>
 
         <div class="examples-item gl2">
-            <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+            <img class = "left-img" src="image/manRunning.jpg" alt="альтернативный текст" />
             <blockquote class="examples-content-right gl3">
                 <p>600 000Р</p>
-                текст пример3
+                <span class="examples-text">Сумма страховой защиты от нещастного случая</span>
             </blockquote>
         </div>
     </div>
@@ -122,92 +122,96 @@
         <div class="container gl1">
 
             <div class="item gray_border">
-                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                <img class = "contacts-img" src="image/calendar.jpg" alt="альтернативный текст" />
                 напиши
 
                 <div class="dropdown-content dropdown-content1 gray_border">
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text1</a></li>
-                            <li><a href="#">text2</a></li>
-                            <li><a href="#">text3</a></li>
-                            <li><a href="#">text4</a></li>
+                            <li><a href="#">Заполните заявление и подготовьте необходимые документы.</a></li>
+                            <li><a href="#">Направьте документы в Страховую компанию удобным для Вас способом: </a></li>
+                            <li><a href="#">через <span class="user">Личный кабинет</span></a></li>
+                            <li><a href="#">письмом по адресу: 125252, г. Москва, а/я 28</a></li>
                         </ul>
                     </div>
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text5</a></li>
-                            <li><a href="#">text6</a></li>
-                            <li><a href="#">text7</a></li>
+                            <li><a href="#">Список необходимых документов для заключения договора:</a></li>
+                            <li class="point"><a href="#">паспорт</a></li>
+                            <li><a href="#">заявление на страхование</a></li>
+                            <li><a href="#">иные документы – по запросу компании</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
             <div class="item gray_border">
-                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                <img class = "contacts-img" src="image/doc.jpg" alt="альтернативный текст" />
                 заполни
 
                 <div class="dropdown-content dropdown-content2 gray_border">
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text1</a></li>
-                            <li><a href="#">text2</a></li>
-                            <li><a href="#">text3</a></li>
-                            <li><a href="#">text4</a></li>
+                            <li><a href="#">Заполните заявление и подготовьте необходимые документы.</a></li>
+                            <li><a href="#">Направьте документы в Страховую компанию удобным для Вас способом: </a></li>
+                            <li><a href="#">через <span class="user">Личный кабинет</span></a></li>
+                            <li><a href="#">письмом по адресу: 125252, г. Москва, а/я 28</a></li>
                         </ul>
                     </div>
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text5</a></li>
-                            <li><a href="#">text6</a></li>
-                            <li><a href="#">text7</a></li>
+                            <li><a href="#">Список необходимых документов для заключения договора:</a></li>
+                            <li class="point"><a href="#">паспорт</a></li>
+                            <li><a href="#">заявление на страхование</a></li>
+                            <li><a href="#">иные документы – по запросу компании</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
             <div class="item gray_border">
-                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                <img class = "contacts-img" src="image/sber.jpg" alt="альтернативный текст" />
                 узнай статус
 
                 <div class="dropdown-content dropdown-content3 gray_border">
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text1</a></li>
-                            <li><a href="#">text2</a></li>
-                            <li><a href="#">text3</a></li>
-                            <li><a href="#">text4</a></li>
+                            <li><a href="#">Заполните заявление и подготовьте необходимые документы.</a></li>
+                            <li><a href="#">Направьте документы в Страховую компанию удобным для Вас способом: </a></li>
+                            <li><a href="#">через <span class="user">Личный кабинет</span></a></li>
+                            <li><a href="#">письмом по адресу: 125252, г. Москва, а/я 28</a></li>
                         </ul>
                     </div>
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text5</a></li>
-                            <li><a href="#">text6</a></li>
-                            <li><a href="#">text7</a></li>
+                            <li><a href="#">Список необходимых документов для заключения договора:</a></li>
+                            <li class="point"><a href="#">паспорт</a></li>
+                            <li><a href="#">заявление на страхование</a></li>
+                            <li><a href="#">иные документы – по запросу компании</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
             <div class="item gray_border">
-                <img class = "none4" src="image/none.png" alt="альтернативный текст" />
+                <img class = "contacts-img" src="image/box.jpg" alt="альтернативный текст"/>
                 получи архив!
 
                 <div class="dropdown-content dropdown-content4 gray_border">
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text1</a></li>
-                            <li><a href="#">text2</a></li>
-                            <li><a href="#">text3</a></li>
-                            <li><a href="#">text4</a></li>
+                            <li><a href="#">Заполните заявление и подготовьте необходимые документы.</a></li>
+                            <li><a href="#">Направьте документы в Страховую компанию удобным для Вас способом: </a></li>
+                            <li><a href="#">через <span class="user">Личный кабинет</span></a></li>
+                            <li><a href="#">письмом по адресу: 125252, г. Москва, а/я 28</a></li>
                         </ul>
                     </div>
                     <div class="dropdown">
                         <ul>
-                            <li><a href="#">text5</a></li>
-                            <li><a href="#">text6</a></li>
-                            <li><a href="#">text7</a></li>
+                            <li><a href="#">Список необходимых документов для заключения договора:</a></li>
+                            <li class="point"><a href="#">паспорт</a></li>
+                            <li><a href="#">заявление на страхование</a></li>
+                            <li><a href="#">иные документы – по запросу компании</a></li>
                         </ul>
                     </div>
                 </div>
@@ -267,24 +271,13 @@
 
                 <br>
                 <br>
-                тел 8549345324
+
+                <span class="number underline pointer"> +7-(917)-809-38-84 </span>
 
                 <br>
                 <br>
-                email:
-                regbvfvre@yandex.ru
-
-                <div class="footer-social gl3">
-                    <a href="#" class="social-btn social-btn-vk gl0">
-                        vk
-                    </a>
-                    <a href="#" class="social-btn social-btn-fb gl0">
-                        fb
-                    </a>
-                    <a href="#" class="social-btn social-btn-in gl0">
-                        in
-                    </a>
-                </div>
+                <span class="email"> email:</span>
+                <span class="email underline pointer"> regbvfvre@yandex.ru </span>
             </div>
         </div>
     </div>
